# deltatraveler-remake

./: .gitignore  CMakeLists.txt  CmakeLIsts.txt  README.md  build.gradle  gradle.properties
app/: build.gradle
app/jni/: CMakeLists.txt  SDL  SDL_image  SDL_mixer  SDL_net  SDL_ttf
app/jni/src/: CMakeLists.txt  code  main.cpp
app/jni/src/code/: main.cpp  platform.h
app/src/main/: AndroidManifest.xml
app/src/main/java/org/deltatraveler/remake/: DeltaRemake.java  RestTrolley.java
app/src/main/res/values/: strings.xml
assets/lang/: order.json
assets/lang/en_US/: fontconf.csv  options.json
code/: main.cpp  platform.h  test1.cpp
code/engine/: scene.h  sceneManager.h  scenelist.h
